weather-chart/templates/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask
spec:
  selector:
    app: flask
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
